src/test/deca/context/valid/operation-binaire-equals.deca
// Description:
//    Test du equals expr
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    1 == 1;
}