src/test/deca/context/invalid/3.33-test-inferieur-egale.deca
// Description:
//    Test 3.3 fail avec inferieur egale
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1 <= "hello world";
}